--- a/src/main/resources/templates/client/blogs.html
+++ b/src/main/resources/templates/client/blogs.html
@@ -1,111 +1,105 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-<head th:replace="~{client/fragments/head :: heads(pageTitle='Blogs...')}">
-    <title>Blogs</title>
-</head>
-<body>
+    <!DOCTYPE html>
+    <html lang="en" xmlns:th="http://www.thymeleaf.org"
+          xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+    <head th:replace="~{client/fragments/head :: heads(pageTitle='Blogs...')}">
+        <title>Blogs</title>
+    </head>
+    <body>
 
-<div th:replace="~{client/fragments/header :: header}"></div>
+    <div th:replace="~{client/fragments/header :: header}"></div>
 
 
-<!-- Page Header Title Start -->
-<div th:replace="~{client/fragments/header_page :: header_page(headerTitle='Blog review')}"></div>
-<!-- Page Header Title End -->
+    <!-- Page Header Title Start -->
+    <div th:replace="~{client/fragments/header_page :: header_page(headerTitle='Blog review')}"></div>
+    <!-- Page Header Title End -->
 
-<!-- List Blog Start -->
+    <!-- List Blog Start -->
 
-<div class="container-fluid py-5">
-    <div class="container py-2">
-        <div class="row">
-            <div class="col-md-9">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card-deck">
-                            <!-- Hiển thị các blog có chỉ số chẵn -->
-                            <div class="card p-3" th:each="blog, iterStat : ${blogs}" th:if="${iterStat.index % 2 == 0}">
-                                <div class="card-title d-flex justify-content-center">
-                                    <h3 th:text="${blog.getBlog_title()}"></h3>
-                                </div>
-                                <div class="card-content">
-                                    <div th:fragment="blog" class="col">
-                                        <div class="card h-100">
-                                            <a th:href="@{${blog.getSlug()}}">
-                                                <img class="card-img-top" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}"/>
-                                            </a>
-                                            <div class="card-body">
-                                                <a th:href="@{${blog.getSlug()}}">
-                                                    <h5 th:text="${blog.getBlog_title()}" class="card-title">Title</h5>
-                                                </a>
-                                                <p th:text="${blog.getBlog_content()}" class="card-text"> </p>
-                                            </div>
-                                        </div>
+    <!-- Your existing HTML content -->
 
-                                    </div>
-                                    <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}" class="btn">Xem chi tiết >></a>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card-deck">
-                            <!-- Hiển thị các blog có chỉ số lẻ -->
-                            <div class="card p-3" th:each="blog, iterStat : ${blogs}" th:if="${iterStat.index % 2 != 0}">
-                                <div class="card-title d-flex justify-content-center">
-                                    <h3 th:text="${blog.getBlog_title()}"></h3>
-                                </div>
-                                <div class="card-content">
-                                    <div th:fragment="blog" class="col">
-                                        <div class="card h-100">
-                                            <a th:href="@{${blog.getSlug()}}">
-                                                <img class="card-img-top" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}"/>
-                                            </a>
-                                            <div class="card-body">
-                                                <a th:href="@{${blog.getSlug()}}">
-                                                    <h5 th:text="${blog.getBlog_title()}" class="card-title">Title</h5>
-                                                </a>
-                                                <p th:text="${blog.getBlog_content()}" class="card-text"> </p>
-                                            </div>
-
-                                        </div>
-                                        <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}" class="btn">Xem chi tiết >></a>
-
-                                    </div>
+    <div class="container-fluid py-5">
+        <div class="container py-2">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="row">
+                        <!-- Loop through blogs and display in a grid -->
+                        <div class="col-md-6" th:each="blog : ${blogs}">
+                            <div class="card mb-3">
+                                <a th:href="@{${'/blog/' + blog.slug + '.html'}}">
+                                    <img class="card-img-top" th:src="@{'/' + ${blog.blog_img}}" th:alt="${blog.blog_title}" style="width: 100%; height: 400px;"/>
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <a th:href="@{${'/blog/' + blog.slug + '.html'}}" th:text="${blog.blog_title}"></a>
+                                    </h5>
+                                    <p class="card-text" th:text="${blog.blog_content}"></p>
+                                    <a th:href="@{${'/blog/' + blog.slug + '.html'}}" class="btn">Xem chi tiết >></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-3">
-                <form class="d-flex mb-3">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-                <div class="card" th:each="blog : ${blogs}">
-                    <div class="card-body d-flex">
-                        <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}">
-                            <img class="card-img-top align-self-start" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}" style="width: 100px; height: auto;"/>
-                        </a>
-                        <div class="flex-grow-1 ms-3">
-                            <h5 class="card-title">
-                                <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}" th:text="${blog.getBlog_title()}"></a>
-                            </h5>
+                <div class="col-md-3">
+                    <!-- Search form -->
+                    <form class="d-flex mb-3">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+
+                    <!-- List of blogs in the sidebar -->
+                    <div class="card" th:each="blog : ${blogs}">
+                        <div class="card-body d-flex">
+                            <a th:href="@{${'/blog/' + blog.slug + '.html'}}">
+                                <img class="card-img-top" th:src="@{'/' + ${blog.blog_img}}" th:alt="${blog.getBlog_title()}" style="width: 100px; height: auto;"/>
+                            </a>
+                            <div class="flex-grow-1 ms-3">
+                                <h5 class="card-title">
+                                    <a th:href="@{${'/blog/' + blog.slug + '.html'}}" th:text="${blog.blog_title}"></a>
+                                </h5>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-</div>
-<!-- List Blog End -->
 
-<!-- Footer Start -->
+    <!-- Pagination -->
 
-<div th:replace="~{client/fragments/footer::footer}"></div>
-<div th:replace="~{client/fragments/js::js-insert}"></div>
-</body>
-</html>
+    <!-- Your existing pagination HTML -->
+
+    <!-- Your existing HTML content -->
+
+
+    <!-- ... your existing HTML content ... -->
+
+    <!-- Pagination -->
+    <div class="container-fluid py-3">
+        <div class="container">
+            <nav aria-label="Page navigation example" style="display: flex; justify-content: center;">
+                <ul class="pagination justify-content-center" style="list-style: none; padding-left: 0; display: flex; justify-content: center;">
+                    <li class="page-item" th:classappend="${currentPage == 0}? 'disabled'">
+                        <a class="page-link" th:href="@{'/blog_demo'}">First</a>
+                    </li>
+                    <li class="page-item" th:classappend="${currentPage == 0}? 'disabled'">
+                        <a class="page-link" th:href="@{'/blog_demo/' + ${currentPage - 1}}">Previous</a>
+                    </li>
+                    <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages - 1)}">
+                        <a class="page-link" th:href="@{'/blog_demo/' + ${i + 1}}" th:text="${i + 1}"></a>
+                    </li>
+                    <li class="page-item" th:classappend="${currentPage + 1 >= totalPages}? 'disabled'">
+                        <a class="page-link" th:href="@{'/blog_demo/' + ${currentPage + 1}}">Next</a>
+                    </li>
+                    <li class="page-item" th:classappend="${currentPage + 1 >= totalPages}? 'disabled'">
+                        <a class="page-link" th:href="@{'/blog_demo/' + ${totalPages - 1 }}">Last</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+
+    <div th:replace="~{client/fragments/footer::footer}"></div>
+    <div th:replace="~{client/fragments/js::js-insert}"></div>
+    </body>
+    </html>
