--- a/src/main/resources/templates/admin/category/createCategory.html
+++ b/src/main/resources/templates/admin/category/createCategory.html
@@ -4,7 +4,7 @@
         class="light-style layout-menu-fixed"
         dir="ltr"
         data-theme="theme-default"
-        data-assets-path="/admin/assets/"
+        data-assets-path="../../admin/assets/"
         data-template="vertical-menu-template-free"
 >
 <head th:replace="~{admin/fragments/head :: heads(pageTitle='Create Category')}">
@@ -32,10 +32,6 @@
                     <div class="row">
                         <div class="col-xl">
                             <div class="card mb-4">
-<!--                                <div class="card-header d-flex justify-content-between align-items-center">-->
-<!--                                    <h5 class="mb-0">Basic Layout</h5>-->
-<!--                                    <small class="text-muted float-end">Default label</small>-->
-<!--                                </div>-->
                                 <div class="card-body">
                                     <form th:action="@{/admin/category/processForm}" th:object="${categoryDTO}" method="post"
                                           class="needs-validation" novalidate enctype="multipart/form-data">
